--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>MQTT Client</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link rel="stylesheet" href="style.css" />
 		<script src="https://unpkg.com/mqtt@3.0.0/dist/mqtt.min.js"></script>
-		<script src="script.js"></script>
-		<script>
+		<script
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ7QPj_9a3CJbnF20tMK4JA_3pvRpjMfY&callback=initMap"
+			async
+			defer
+		></script>
+<script>
 			var client = mqtt.connect('ws://3.15.28.103:3000');
 
-			client.subscribe('new-user');
-			client.subscribe('LOCATION');
 			client.subscribe('TEMP');
 
 			client.on('connect', function() {
@@ -33,33 +35,19 @@
 						break;
 				}
 
-				switch (topic) {
-					case 'LOCATION':
-						document.getElementById('LOCATION').innerHTML = message.toString();
-						break;
 
-					default:
-						break;
-				}
 			});
-
-			function led(value) {
-				client.publish('LED', value);
-				alert("Deger gonderildi.");
-			}
 		</script>
-		<div style="height: 50px"></div>
+
+		<script src="script.js"></script>
 	</head>
-	<body style="background-color:powderblue;">
-		<div class="container-fluid" align="center" >
-		<button onclick="led('on')">Led On</button>
-		<button onclick="led('off')">Led Off</button>
-		<br>
-		<br>
-		<div style="padding: 10px">DHT veri: <strong id="TEMP"></strong></div>
-		<br>
-		<br>
-		<div style="padding: 10px">GY-NEO veri : <strong id="LOCATION"></strong></div>
+	<body>
+		<div id="map-container">
+			<div id="map"></div>
+			<div id="info">
+				<h2><span id="km">150</span> km/h</h2>
+				<h4><span id="TEMP">0</span> °C</h4>
+			</div>
 		</div>
 	</body>
 </html>
